cafu37_오류파일__15시 47분 10초.txt
buffers_g ['', '', '', '', '']
[설정] 저장된 설정 적용 완료
[캡차 로컬설치] 체크 상태: 1
[LOCAL STT] 음성캡차 엔진 설치 중... (3/4)
[LOCAL STT] 음성캡차 엔진 설치 중... (4/4) 수 분 소요
[LOCAL STT] 음성캡차 엔진 설치 완료
[LOCAL STT] 워커 파일 존재: True, 크기: 3172
[LOCAL STT] 워커 파일 읽기 테스트: stdout=, stderr=Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "<string>", line 2
    import sys, json, os, subprocess, tempfile, uuid,
                                                     ^
SyntaxError: invalid syntax, code=1
[LOCAL STT] Python-STT 경로: C:\Python-STT\python.exe
[LOCAL STT] Python 테스트 stdout: 3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)]
ok
[LOCAL STT] Python 테스트 stderr: 
[LOCAL STT] Python 테스트 코드: 0
[LOCAL STT] 워커 직접 실행: 10초 초과 (정상 - 모델 로딩 중)
[LOCAL STT] 서브프로세스 시작 (PID: 5588)
[LOCAL STT] 상태: {'status': 'ready'}
시작
realID cafu37
realPW tlarudtlr1!
로그인 성공
모드4
[로그 초기화 완료] C:\Users\cafu0\Desktop\새 폴더\page_info_log.txt
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 0
1568
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
외부 IP: 49.254.130.114
---여기
쇼핑
---여기
블로그
---여기
전체
---여기
블로그
---여기
쇼핑
---여기
카페
---여기
전체
---여기
카페
---여기
쇼핑
---여기
블로그
---여기
클립
---여기
이미지
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
뉴스
---여기
전체
---여기
뉴스
---여기
쇼핑
---여기
블로그
---여기
카페
---여기
클립
---여기
이미지
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
전체
---여기
동영상
---여기
쇼핑
영수증 캡차 
* recording
* done recording
--로컬 STT 분석 시작
[LOCAL STT] recognized:  8, 9, 3, 9, 6, 6 → digits: 893966
변환된 텍스트: 893966
check_word 길이 : 6
총-----> 1번째 만에 성공
성공
--------mode4 전체 error-------------import --------
에러메세지
list index out of range
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 1
1568
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
외부 IP: 115.144.186.55
---여기
쇼핑
---여기
카페
---여기
블로그
---여기
전체
---여기
블로그
---여기
쇼핑
---여기
카페
---여기
전체
---여기
카페
---여기
쇼핑
---여기
블로그
---여기
클립
---여기
이미지
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
뉴스
---여기
전체
---여기
뉴스
---여기
쇼핑
---여기
카페
---여기
블로그
---여기
클립
---여기
이미지
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
전체
---여기
동영상
---여기
쇼핑
영수증 캡차 
* recording
* done recording
--로컬 STT 분석 시작
[LOCAL STT] recognized:  넷 아홉 넷 여섯 넷 둘 → digits: 494642
변환된 텍스트: 494642
check_word 길이 : 6
총-----> 1번째 만에 성공
성공
--------mode4 전체 error-------------import --------
에러메세지
list index out of range
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 2
1568
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
외부 IP: 49.254.115.60
---여기
블로그
---여기
전체
---여기
블로그
---여기
카페
---여기
전체
---여기
카페
---여기
블로그
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
쇼핑
---여기
뉴스
---여기
전체
---여기
뉴스
---여기
블로그
---여기
카페
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
전체
---여기
동영상
---여기
블로그
---여기
카페
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
쇼핑
영수증 캡차 
* recording
* done recording
--로컬 STT 분석 시작
[LOCAL STT] recognized:  4, 6, 9, 6, 8, 5 → digits: 469685
변환된 텍스트: 469685
check_word 길이 : 6
총-----> 1번째 만에 성공
성공
--------mode4 전체 error-------------import --------
에러메세지
list index out of range
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 3
1568
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
외부 IP: 125.7.135.34
시작
File saved to: C:\Users\cafu0\Desktop\새 폴더\logfile.txt

--- Captured Logs ---
buffers_g ['', '', '', '', '']
[설정] 저장된 설정 적용 완료
[캡차 로컬설치] 체크 상태: 1
[LOCAL STT] 음성캡차 엔진 설치 중... (3/4)
[LOCAL STT] 음성캡차 엔진 설치 중... (4/4) 수 분 소요
[LOCAL STT] 음성캡차 엔진 설치 완료
[LOCAL STT] 워커 파일 존재: True, 크기: 3172
[LOCAL STT] 워커 파일 읽기 테스트: stdout=, stderr=Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "<string>", line 2
    import sys, json, os, subprocess, tempfile, uuid,
                                                     ^
SyntaxError: invalid syntax, code=1
[LOCAL STT] Python-STT 경로: C:\Python-STT\python.exe
[LOCAL STT] Python 테스트 stdout: 3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)]
ok
[LOCAL STT] Python 테스트 stderr: 
[LOCAL STT] Python 테스트 코드: 0
[LOCAL STT] 워커 직접 실행: 10초 초과 (정상 - 모델 로딩 중)
[LOCAL STT] 서브프로세스 시작 (PID: 5588)
[LOCAL STT] 상태: {'status': 'ready'}
시작
realID cafu37
realPW tlarudtlr1!
로그인 성공
모드4
[로그 초기화 완료] C:\Users\cafu0\Desktop\새 폴더\page_info_log.txt
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 0
1568
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
외부 IP: 49.254.130.114
---여기
쇼핑
---여기
블로그
---여기
전체
---여기
블로그
---여기
쇼핑
---여기
카페
---여기
전체
---여기
카페
---여기
쇼핑
---여기
블로그
---여기
클립
---여기
이미지
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
뉴스
---여기
전체
---여기
뉴스
---여기
쇼핑
---여기
블로그
---여기
카페
---여기
클립
---여기
이미지
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
전체
---여기
동영상
---여기
쇼핑
영수증 캡차 
* recording
* done recording
--로컬 STT 분석 시작
[LOCAL STT] recognized:  8, 9, 3, 9, 6, 6 → digits: 893966
변환된 텍스트: 893966
check_word 길이 : 6
총-----> 1번째 만에 성공
성공
--------mode4 전체 error-------------import --------
에러메세지
list index out of range
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 1
1568
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
외부 IP: 115.144.186.55
---여기
쇼핑
---여기
카페
---여기
블로그
---여기
전체
---여기
블로그
---여기
쇼핑
---여기
카페
---여기
전체
---여기
카페
---여기
쇼핑
---여기
블로그
---여기
클립
---여기
이미지
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
뉴스
---여기
전체
---여기
뉴스
---여기
쇼핑
---여기
카페
---여기
블로그
---여기
클립
---여기
이미지
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
전체
---여기
동영상
---여기
쇼핑
영수증 캡차 
* recording
* done recording
--로컬 STT 분석 시작
[LOCAL STT] recognized:  넷 아홉 넷 여섯 넷 둘 → digits: 494642
변환된 텍스트: 494642
check_word 길이 : 6
총-----> 1번째 만에 성공
성공
--------mode4 전체 error-------------import --------
에러메세지
list index out of range
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 2
1568
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
외부 IP: 49.254.115.60
---여기
블로그
---여기
전체
---여기
블로그
---여기
카페
---여기
전체
---여기
카페
---여기
블로그
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
쇼핑
---여기
뉴스
---여기
전체
---여기
뉴스
---여기
블로그
---여기
카페
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
전체
---여기
동영상
---여기
블로그
---여기
카페
---여기
이미지
---여기
클립
---여기
지식iN
---여기
인플루언서
---여기
쇼핑
영수증 캡차 
* recording
* done recording
--로컬 STT 분석 시작
[LOCAL STT] recognized:  4, 6, 9, 6, 8, 5 → digits: 469685
변환된 텍스트: 469685
check_word 길이 : 6
총-----> 1번째 만에 성공
성공
--------mode4 전체 error-------------import --------
에러메세지
list index out of range
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 3
1568
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
외부 IP: 125.7.135.34
시작
File saved to: C:\Users\cafu0\Desktop\새 폴더\logfile.txt

시작
File saved to: C:\Users\cafu0\Desktop\새 폴더\logfile.txt